gitignore 설정 변경

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-application-jwt.yml
+src/main/resources/application-jwt.yml
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,intellij,java
