--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,28 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: 'false'
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/cozystates?useSSL=false&allowPublicKeyRetrieval=true&useLegacyAuth=false
+    username: Dong
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: local
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true  # (3) SQL pretty print
+  sql:
+    init:
+      data-locations: classpath*:db/h2/data.sql
+logging:
+  level:
+    org:
+      springframework:
+        orm:
+          jpa: DEBUG
