--- a/build.gradle
+++ b/build.gradle
@@ -46,10 +46,16 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.1.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
 
-	implementation 'software.amazon.awssdk:s3:2.17.10'
-	// s3
+	//// transferManager
+	implementation 'software.amazon.awssdk:s3:2.19.1' // 의존성 통일
+
+
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-	implementation 'com.amazonaws:aws-java-sdk-s3'
+//	implementation 'com.amazonaws:aws-java-sdk-s3'
+
+	// transferManager
+	implementation 'software.amazon.awssdk:s3-transfer-manager:2.19.1'
+
 
 	implementation 'mysql:mysql-connector-java:8.0.32'
 
