Fix: 일부 리팩토링

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ cloud:
       accessKey: ${AWS_ACCESS_KEY2}
       secretKey: ${AWS_SECRET_KEY2}
     s3:
-      bucket: cozystates-bucket-01 ${BUCKET_NAME}
+      bucket: cozystates-bucket-01
     region:
       static: ap-northeast-2
     stack:
@@ -15,6 +15,8 @@ spring:
     url: jdbc:mysql://localhost:3306/tmpdb
     username: root
     password: a9250991518A!
+    schema:
+      classpath: import.sql
     driver-class-name: com.mysql.cj.jdbc.Driver
   profiles:
     active: local
