--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,37 @@ cloud:
 spring:
   datasource:
     url: jdbc:mysql://database-cozystates.c1hypxzbotyv.ap-northeast-2.rds.amazonaws.com:13306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+    password: 12341234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true  # (3) SQL pretty print
+    servlet:
+      multipart:
+        max-file-size: 10MB
+        max-request-size: 10MB
+    sql:
+      init:
+        data-locations: classpath*:db/h2/data.sql
+  logging:
+    level:
+      org:
+        springframework:
+          orm:
+            jpa: DEBUG
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
+            scope:    
     username: admin
     password: 12341234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -36,5 +67,20 @@ spring:
         springframework:
           orm:
             jpa: DEBUG
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
+            scope:
+              - profile
+              - email
 config:
   domain: http://cozystates-bucket-01.s3-website.ap-northeast-2.amazonaws.com
+jwt:
+  secret: ${JWT_SECRET}
+  access_token_expired: 3_600_000 #3_600_000
+  refresh_token_expired: 604_800_000
+            
