--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ cloud:
 spring:
   datasource:
     url: jdbc:mysql://database-cozystates.c1hypxzbotyv.ap-northeast-2.rds.amazonaws.com:13306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+    username: admin
     password: 12341234
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
