--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,17 +11,17 @@ cloud:
       auto: 'false'
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cozystates?useSSL=false&allowPublicKeyRetrieval=true&useLegacyAuth=false
-    username: Dong
+    url: jdbc:mysql://localhost:3306/tmpdb?useSSL=false&allowPublicKeyRetrieval=true&useLegacyAuth=false
+    username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
   profiles:
     active: local
-    include: jwt, redis, oauth
+    include: jwt, oauth
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-        ddl-auto: update
+        ddl-auto: create
     show-sql: true
     properties:
       hibernate:
