--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ cloud:
       accessKey: ${AWS_ACCESS_KEY}
       secretKey: ${AWS_SECRET_KEY}
     s3:
-      bucket: cozystates-bucket-01
+      bucket: cozystates.com
     region:
       static: ap-northeast-2
     stack:
@@ -12,8 +12,8 @@ cloud:
 spring:
   datasource:
     url: jdbc:mysql://database-cozystates.c1hypxzbotyv.ap-northeast-2.rds.amazonaws.com:13306/cozystates?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-    username: Dong
-    password: 1234
+    username: admin
+    password: 12341234
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -47,9 +47,25 @@ spring:
               - profile
               - email
 config:
-  domain: http://cozystates-bucket-01.s3-website.ap-northeast-2.amazonaws.com
+  domain: http://cozystates.com.s3-website.ap-northeast-2.amazonaws.com/
+
 jwt:
   secret: ${JWT_SECRET}
   access_token_expired: 3_600_000 #3_600_000
   refresh_token_expired: 604_800_000
+
+springdoc:
+  packages-to-scan: com.example.server
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: cozystates.html            # Swagger UI 경로 => localhost:8000/demo-ui.html
+    tags-sorter: alpha            # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬
+    operations-sorter: alpha      # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬
+  api-docs:
+    path: /api-docs/json
+    groups:
+      enabled: true
+  cache:
+    disabled: true
 
