--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,10 +18,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-masonry-css": "^1.0.16",
-    "react-redux": "^8.1.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
