--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "styled-components": "^6.0.1",
+    "sweetalert2": "^11.7.20",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
