--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^27.5.2",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "embla-carousel-react": "^8.0.0-rc11",
     "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
